Corrected the alignment in mobile view for about us

--- a/public/home.css
+++ b/public/home.css
@@ -244,15 +244,14 @@
       text-align: center;
     }
   
-    .left-content,
-    .right-content {
+    .left-content{
       width: 100%;
-      margin-bottom: 2rem;
+      margin-bottom: 4rem;
     }
   
     .right-content {
-      text-align: center;
-    }
+      visibility: hidden;
+    }  
   }
   
   
@@ -262,9 +261,25 @@
       flex-basis: 90%;
       max-width: 90%;
     }
+    .cards-whole-container{
+      background-image: none !important;
+      background: transparent;
+    }
   }
   
   @media (max-width: 450px) {
     .container-fluid{
       max-height: 10rem;
-    }}
+    }
+    .about-us-container{
+      padding-top: 2rem;
+    }
+    .about-us-box{
+      width: 100%;
+      padding: 0;
+    }
+    .about-us-bg-img{
+      margin-top: 2.5rem;
+      margin-bottom: 20px;
+    }
+  }
